--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "author": "Luis Angel Llull Céspedes",
   "license": "ISC",
   "dependencies": {
-    "@nestjs/common": "^8.0.11",
-    "fastify-multer": "^2.0.2",
-    "multer": "^1.4.3"
+    "@nestjs/common": "^9.0.0",
+    "fastify-multer": "^2.0.3",
+    "multer": "^1.4.5-lts.1"
   },
   "keywords": [
     "fastify",
